# stake-pool

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-cli.yml  publish-rust.yml
clients/cli/: Cargo.toml
clients/cli/scripts/: setup-stake-pool-token-2022.sh  setup-test-validator.sh
clients/cli/src/: client.rs  main.rs  output.rs
clients/js-legacy/: .eslintrc.js  package.json  pnpm-lock.yaml  rollup.config.mjs
clients/js-legacy/src/: config.ts  constants.ts  index.ts  instructions.ts  layouts.ts
clients/js-legacy/src/utils/: stake.ts
clients/js-legacy/test/: instructions.test.ts
clients/py/: optional-requirements.txt  requirements.txt
clients/py/spl_token/: actions.py
clients/py/stake/: actions.py
clients/py/stake_pool/: actions.py  constants.py  state.py
clients/py/tests/: conftest.py
clients/py/vote/: actions.py
program/: Cargo.toml  program-id.md
program/src/: big_vec.rs  error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: increase.rs  withdraw_edge_cases.rs
program/tests/helpers/: mod.rs
scripts/: solana.dic
scripts/client/: format-cli.mjs  format-js.mjs  lint-cli.mjs  lint-js.mjs  publish-cli.mjs  publish-js.mjs  test-cli.mjs  test-js.mjs  test-py.mjs
