[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "2.0.1"

[dependencies]
borsh = "1.5.7"
clap = "2.33.3"
serde = "1.0.219"
serde_derive = "1.0.130"
serde_json = "1.0.140"
solana-account-decoder = "2.2.0"
solana-clap-utils = "2.2.0"
solana-cli-config = "2.2.0"
solana-cli-output = "2.2.0"
solana-client = "2.2.0"
solana-logger = "2.2.0"
solana-program = "2.2.1"
solana-remote-wallet = "2.2.0"
solana-sdk = "2.2.1"
spl-associated-token-account = { version = "=6.0.0", features = [
  "no-entrypoint",
] }
spl-associated-token-account-client = { version = "=2.0.0" }
spl-stake-pool = { version = "=2.0.1", path = "../../program", features = [
  "no-entrypoint",
] }
spl-token = { version = "=8.0", features = [
  "no-entrypoint",
] }
spl-token-2022 = { version = "=8.0", features = [
  "no-entrypoint",
] }
bs58 = "0.5.1"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
